Updates from Overleaf

--- a/LP_Avancement.tex
+++ b/LP_Avancement.tex
@@ -14,23 +14,23 @@
   \hline 
     \textbf{Notions de viscosité d'un fluide. \'{E}coulements visqueux} &  & \textcolor{red}{\textbf{0\%}} &  Exemple : agrégat + diapo Hervé   \\
   \hline 
-  \textbf{Modèle de l'écoulement parfait d'un fluide} & ??? Mesure $\rho_{air}$ sonde Pitot + anémomètre ???  & \textcolor{red}{\textbf{0\%}} & Leçon Thibaut pas mal \\
+  \textbf{Modèle de l'écoulement parfait d'un fluide} p\pageref{LP_EcoulementParfait} & Mesure $\rho_{air}$ sonde Pitot + anémomètre & \textcolor{red}{\textbf{0\%}} & Manip à faire \\
   \hline
-  \textbf{Phénomènes interfaciaux impliquant des fluides} & Loi de Jurin - loi de Laplace - expériences quali bulles savon & \textcolor{yellow}{\textbf{60\%}} & Plan leçon Lydia super, à s'approprier\\
+  \textbf{Phénomènes interfaciaux impliquant des fluides} p\pageref{LP_PhenomenesInterfaciaux} & Loi de Jurin - loi de Laplace - expériences quali bulles savon & \textcolor{yellow}{\textbf{60\%}} & Plan leçon Lydia super, à s'approprier\\
   \hline 
   \hline
   \textbf{Premier principe de la thermodynamique} p\pageref{LP_PremierPrincipe} & Mesure $c_{fer}$ dans calorimètre - Expérience Joule (cf Thibaut) & \textcolor{orange}{\textbf{50\%}} & Leçon Lydia a bien marché \\
   \hline 
-  \textbf{Transitions de phase} & Mesure chaleur latente de l'eau/azote & \textcolor{red}{\textbf{20\%}} & \\
+  \textbf{Transitions de phase} p\pageref{LP_TransitionPhase} & Mesure chaleur latente de l'eau/azote & \textcolor{red}{\textbf{20\%}} & \\
   \hline 
-  \textbf{Phénomènes de transport} p\pageref{LP_Transport} & \textcolor{red}{Diffusion du glycérol dans l'eau/concutivité thermique du cuivre}& \textcolor{red}{\textbf{0\%}} & Annale 2017 (standard) + Leçon Lucas pas mal\\
+  \textbf{Phénomènes de transport} p\pageref{LP_Transport} & \textcolor{red}{Diffusion du glycérol dans l'eau/conductivité thermique du cuivre}& \textcolor{red}{\textbf{0\%}} & Annale 2017 (standard) + Leçon Lucas pas mal\\
   \hline 
   \hline
   \textbf{Conversion de puissance électromécanique} p\pageref{LP_ConversionPuissance} & Etude MCC (résistance, rendement, ...) & \textcolor{red}{\textbf{0\%}} & Leçon Basile\\
   \hline 
   \textbf{Induction électromagnétique} & Mesure inductance circuit LC + aimant & \textcolor{red}{\textbf{0\%}} & Leçon Lydia assez complet\\
   \hline
-  \textbf{Rétroaction et oscillations} & Quali : moteur asservi. Quanti : Pont de Wien & \textcolor{red}{\textbf{0\%}} & Cours Jérémy Neveu + leçon Thibaut\\
+  \textbf{Rétroaction et oscillations} p\pageref{LP_RetroactionOscillation} & Quali : moteur asservi. Quanti : Pont de Wien & \textcolor{red}{\textbf{0\%}} & \\
   \hline
   \textbf{Traitement d'un signal. Étude spectrale} p\pageref{LP_TraitementSignal} & Boucle vérouillage de phase (mesurer $\Delta \nu_c$) - Détection synchrone & \textcolor{red}{\textbf{0\%}} & \\
   \hline
