--- a/LP_Induction.tex
+++ b/LP_Induction.tex
@@ -34,13 +34,13 @@
   \newline
   
   \textbf{Déroulé détaillé de la leçon: }\newline
-  \textbf{0. Introduction} 
+  \section*{Introduction} 
   \begin{itemize}
       \item \textbf{Cadre général :} ARQS magnétique
       \item \textbf{Introduction historique :} Oersted (1820): courants éléctriques induisent $\mathbf B$. Faraday (1831): Variations de $\mathbf B$ qui induisent des courants électriques. 
   \end{itemize}
   \vspace{1cm}
-  \textbf{I. Approche expérimentale} 3min20
+  \section{Approche expérimentale} 3min20
   \begin{itemize}
       \item \textbf{Expérience qualitative 1:} Approche un aimant et éloigne un aimant droit d'une bobine fixe branchée à un oscilloscope : apparition d'une tension. Même observation avec déplacement de la bobine dans aimant fixe. Amplitude de l'intensité proportionnelle à la vitesse de variation de $\mathbf B$.
       \item \textbf{Définition générale de l'induction (slide)} apparition d'une f.e.m et, s'ils peuvent s'écouler, de courants, dans un conducteur mobile placé d'un champ magnétique variable.
@@ -56,7 +56,7 @@
 \end{enumerate}
 
 \vspace{1cm}
-\textbf{II. Théorie de l'induction} 6min10
+\section{Théorie de l'induction} 6min10
 \begin{enumerate}
     \item \textbf{Définition formelle de la fem}: $e = \frac{1}{q} \oint \mathbf F(\mathbf r, t) \cdot \ud \mathbf l$. \\
     Ici : $\mathbf F$ force de Lorentz $\rightarrow e = \oint \mathbf E \cdot \ud \mathbf l + \oint (\mathbf B \land \mathbf v) \cdot \ud \mathbf l$.
@@ -74,7 +74,7 @@
 \textbf{Conclusion orale}: Cas général : somme des deux cas (Neumman et Lorentz). Même phénomène : on le voit par changement de référentiel (exemple avec la première expérience qualitative).
 
 \vspace{1cm}
-\textbf{III. Aspects pratiques} 15min30
+\section{Aspects pratiques} 15min30
 \begin{enumerate}
     \item \textbf{Auto-induction :} Dessin spire avec ligne de champ. \\
     Flux propre : $\phi_p = L i$, $L$ inductance propre (H). \\
@@ -92,7 +92,8 @@
 \end{enumerate}
 
 \vspace{1cm}
-\textbf{Conclusion} Applications diverses (on a vu bobines et transformateurs). \\
+\section*{Conclusion} 
+Applications diverses (on a vu bobines et transformateurs). \\
 Autres applications (slides) : Plaques à induction, Feinage par induction.\newline
 39min12
 \end{reportBlock}
