--- a/LP_Resonance/LP_Resonance.tex
+++ b/LP_Resonance/LP_Resonance.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% En-tête leçon
 \begin{headerBlock}
-  \chapter{Phénomènes de résonance dans différents domaines de a physique}
+  \chapter{Phénomènes de résonance dans différents domaines de la physique}
   \label{LP_resonance} 
 \end{headerBlock}
 
