--- a/main.tex
+++ b/main.tex
@@ -81,10 +81,9 @@
 
 %%%% document
 \begin{document}
-\input{Transition_Physique.tex}
-\newpage
 \tableofcontents
 \newpage
+\input{Transition_Physique.tex}
 \input{LP_avancement.tex}
 \newpage
 \input{LP_Gravitation.tex}
@@ -97,16 +96,16 @@
 \newpage
 \input{LP_PremierPrincipe.tex}
 \newpage
-%\input{LP_TransitionPhase.tex}
-%\newpage
+\input{LP_TransitionPhase.tex}
+\newpage
 \input{LP_PhenomenesTransport.tex}
 \newpage
 \input{LP_ConversionPuissance.tex}
 \newpage
 \input{LP_Induction.tex}
 \newpage
-%\input{LP_RetroactionOscillations.tex}
-%\newpage
+\input{LP_RetroactionOscillation.tex}
+\newpage
 \input{LP_TraitementSignal/LP_TraitementSignal}
 \newpage
 %\input{LP_OndeProgressive.tex}
