Updates from Overleaf

--- a/LP_Avancement.tex
+++ b/LP_Avancement.tex
@@ -75,7 +75,7 @@
   \hline
   \textbf{Cinématique relativiste. Expérience de Michelson et Morley} p\pageref{LP_CinematiqueRelativiste} & logiciel Gum\_MC, exp Frish et Smith & \textcolor{yellow}{\textbf{20\%}} & Plan ok, manip à bosser  \\
   \hline
-  \textbf{Effet tunnel : application à la radioactivité alpha} & simulation Alexandre & \textcolor{red}{\textbf{0\%}} &   \\
+  \textbf{Effet tunnel : application à la radioactivité alpha} & simulation Alexandre & \textcolor{red}{\textbf{0\%}} & Code Gamow à retravailler  \\
   \hline
 \end{tabularx}
 \end{center}
