--- a/LP_DivisionAmplitude/LPO3_Division_Amplitude.tex
+++ b/LP_DivisionAmplitude/LPO3_Division_Amplitude.tex
@@ -108,13 +108,13 @@
 \clearpage
   \begin{figure}[!htbp]
   \centering
-  \includegraphics[scale=0.6]{LPO3/localisation.jpg}
+  \includegraphics[scale=0.6]{LP_DivisionAmplitude/localisation.jpg}
   \caption{\label{fig:localisation}Système interférométrique (SO) éclairé par une source étendue. Les voies 1 et 2 constituent les voies de l'interféromètre. S et S' sont deux points sources.}
   \end{figure}
   
   \begin{figure}[!htbp]
   \centering
-  \includegraphics[scale=0.4]{LPO3/Michelson.jpg}
+  \includegraphics[scale=0.4]{LP_DivisionAmplitude/Michelson.jpg}
   \caption{\label{fig:Michelson}Schéma équivalent du Michelson. S$_1$ et S$_2$ sont les images de S à travers respectivement la voie 1 (Miroir M1) et la voie 2 (miroir M2) de l'interféromètre. Le miroir (M1') est l'image de (M1) à travers la séparatrice.}
   \end{figure}
   \clearpage
