--- a/LP_Resonance/LP_Resonance.tex
+++ b/LP_Resonance/LP_Resonance.tex
@@ -53,6 +53,7 @@ Définition : pour un système auquel qu'on soumet à une excitation sinusoïdal
 \end{center}    
 
 
-\textcolor{green}{Expérience : montrer l'influence du couplage sur la résonance du premier circuit RLC à l'aide d'un deuxième circuit RLC.}
-  \section{}
+\textcolor{blue}{Expérience : }montrer l'influence du couplage sur la résonance du premier circuit RLC à l'aide d'un deuxième circuit RLC. Intérêt pratique ?
+
+\section{Cavité résonante}
 \end{reportBlock}
