--- a/LP_TensionSurface/LPF3_Tension_surface.tex
+++ b/LP_TensionSurface/LPF3_Tension_surface.tex
@@ -72,7 +72,7 @@ L'étude des phénomènes interfaciaux permet de répondre à un certain nombre 
  Question : La pression est-t-elle plus grande dans les petites bulles ou dans les grandes bulles ? \\
  \textcolor{purple}{Expérience avec générateur de bulles : la petite bulle est "mangée" par la grosse.}
  \begin{center}
-     \includegraphics[scale=0.1]{LPF3/Manip_Laplace.jpg}
+     \includegraphics[scale=0.1]{LP_TensionSurface/Manip_Laplace.jpg}
      
  \end{center}
  CCL : la pression est donc plus grande dans les petites bulles : on peut le démontrer mathématiquement via la \textbf{Loi de Laplace.}
@@ -119,7 +119,7 @@ La pente de $\Delta P = 4 \gamma\times 1/R$ donne $\gamma=28.8 \pm 2.2$~mN/m$^2$
   \end{itemize}
   Photo ménisque : résulte de cette compétition entre tension de surface responsable de sa formation et gravité qui s'y oppose. Menisque concave pour un fluide mouillant (ex: eau dans tube en verre) et convexe pour un fluide peu mouillant (ex: mercure dans tube en verre)
   \begin{center}
-      \includegraphics[scale=0.1]{LPF3/Menisque.jpg}
+      \includegraphics[scale=0.1]{LP_TensionSurface/Menisque.jpg}
   \end{center}
 
   \subsection{Ascension dans un tube (34min)}
