--- a/main.tex
+++ b/main.tex
@@ -94,6 +94,8 @@
 %\newpage
 \input{LP_EcoulementParfait}
 \newpage
+\input{LP_TensionSurface/LPF3_Tension_surface.tex}
+\newpage
 \input{LP_PremierPrincipe.tex}
 \newpage
 \input{LP_TransitionPhase.tex}
@@ -108,8 +110,8 @@
 \newpage
 \input{LP_TraitementSignal/LP_TraitementSignal}
 \newpage
-%\input{LP_OndeProgressive.tex}
-%\newpage
+\input{LP_OndeProgressive.tex}
+\newpage
 %\input{LP_OndeAcoustique.tex}
 %\newpage
 %\input{LP_PropagationGuidee.tex}
@@ -118,7 +120,7 @@
 %\newpage
 \input{LP_InterferencesDeuxOndes}
 \newpage
-\input{LPO3/LPO3_Division_Amplitude.tex}
+\input{LP_DivisionAmplitude/LPO3_Division_Amplitude.tex}
 \newpage
 %\input{LP_DiffractionFraunhofer}
 %\newpage 
@@ -126,15 +128,15 @@
 \newpage 
 \input{LP_AbsorbtionEmission}
 \newpage
-\input{LPF3/LPF3_Tension_surface.tex}
-\newpage
-\include{LPS2_Ferromagnétisme.tex}
+\include{LP_Ferromagnetisme.tex}
 \newpage
 \include{LP_ConductionElec}
 \newpage
 \include{LP_Resonance/LP_Resonance}
 \newpage 
 \include{LP_CinematiqueRelativiste}
+\newpage
+\include{LP_EffetTunnel}
 \newpage
 \input{Transition_Chimie.tex}
 \newpage
@@ -146,7 +148,7 @@
 \newpage
 \input{LC_Diagramme_binaire.tex}
 \newpage
-\input{LC22/LC22_Conductimétrie.tex}
+\input{LC_Conductimetrie/LC22_Conductimétrie.tex}
 \newpage
 \input{LC_CinetiqueElectrochimique}
 
