--- a/main.tex
+++ b/main.tex
@@ -90,8 +90,8 @@
 \newpage
 \input{LP_LoideConservation}
 \newpage
-%\input{LP_Viscosite}
-%\newpage
+\input{LP_Viscosite.tex}
+\newpage
 \input{LP_EcoulementParfait}
 \newpage
 \input{LP_TensionSurface/LPF3_Tension_surface.tex}
@@ -114,8 +114,9 @@
 \newpage
 %\input{LP_OndeAcoustique.tex}
 %\newpage
-%\input{LP_PropagationGuidee.tex}
-%\newpage
+%
+\input{LP_PropagationGuidee.tex}
+\newpage
 %\input{LP_Microscopies.tex}
 %\newpage
 \input{LP_InterferencesDeuxOndes}
