Updates from Overleaf

--- a/LP_PropagationGuidee.tex
+++ b/LP_PropagationGuidee.tex
@@ -54,7 +54,8 @@
   \subsection{Rapport des ondes stationnaires (ROS)}
 
   \section{Ondes centimétrique en propagation guidée}
-  
+
+  \textcolor{blue}{Expérience quantitative :} Mesure de la relation de dispersion dans un guide et mesure de la fréquence de propagation dans un guide d'onde (TP Onde 2).
   
 
 \end{reportBlock}
