--- a/main.tex
+++ b/main.tex
@@ -117,8 +117,8 @@
 %
 \input{LP_PropagationGuidee.tex}
 \newpage
-%\input{LP_Microscopies.tex}
-%\newpage
+\input{LP_Microscospie.tex}
+\newpage
 \input{LP_InterferencesDeuxOndes}
 \newpage
 \input{LP_DivisionAmplitude/LPO3_Division_Amplitude.tex}
