Updates from Overleaf

--- a/LP_TensionSurface/LPF3_Tension_surface.tex
+++ b/LP_TensionSurface/LPF3_Tension_surface.tex
@@ -90,7 +90,7 @@ L'étude des phénomènes interfaciaux permet de répondre à un certain nombre 
      \item Lorsque $R \rightarrow \infty$ (surface plane), on a continuité de la pression.
      \item Cette loi nous permet de mesurer $\gamma$ expérimentalement.
  \end{itemize}
- \subsection{Mesure de $\gamma$ (17min)}
+ \subsection{Mesure de \text{$\gamma$} (17min)}
  \textcolor{purple}{Expérience :}  Pour une bulle de savon, deux interfaces donc $\Delta P =\frac{4\gamma}{R}$. On génère une bulle, on mesure son rayon et la pression à l'intérieur grâce à un manomètre différentiel de mesurer la différence de pression entre l'intérieur de la bulle et l'extérieur à travers une mesure de tension (piézo). J'ai pris plusieurs points en préparation, je vais en prendre un devant vous. Une regression linéaire $\delta P = \frac{A}{R}$ permet d'obtenir $\gamma$. \\
  \textbf{19min30}\\
 
