Updates from Overleaf

--- a/LC_Avancement.tex
+++ b/LC_Avancement.tex
@@ -19,7 +19,7 @@ Code couleur pour les manips :
   \hline
   \textbf{Dosage} & Dosage par étalonnage (ex: sérum phy) & \textcolor{red}{\textbf{0\%}}  & 1ère générale - spécialité \\
   \hline
-  \textbf{Synthèse, traitement, caractérisations} & Filtration sous vide & \textcolor{red}{\textbf{0\%}}  & 1ère générale - spécialité \\
+  \textbf{Synthèse, traitement, caractérisations} p\pageref{LC_SyntheseTraitement} & Filtration sous vide & Synthèse acide benzoïque  & 1ère générale - spécialité \\
   \hline
   \hline
   \textbf{Oxydants et réducteurs} & Réaliser une pile & \textcolor{red}{\textbf{0\%}}  & Term générale - spécialité \\
@@ -119,7 +119,7 @@ Code couleur pour les manips :\\
   \hline
   \textbf{Cinétique homogène} & Déterminer $E_a$ & \textcolor{red}{0\%} & MPSI \\
   \hline
-  \textbf{Diagrammes E-pH} & Mettre en \oe uvre une médiamutation & \textcolor{red}{0\%} & MPSI \\
+  \textbf{Diagrammes E-pH} p\pageref{LC_DiagrammeEpH} & Mettre en \oe uvre une médiamutation & \textcolor{red}{0\%} & MPSI \\
   \hline
   \textbf{Liaisons chimiques} & Utiliser Vesta ou avogadro & \textcolor{red}{0\%} & MPSI \\
   \hline
