--- a/LP_AbsorbtionEmission.tex
+++ b/LP_AbsorbtionEmission.tex
@@ -21,6 +21,10 @@
    Poly laser & A. Maitre &  &  \\
 \hline
  Sextant & & Hermann & \\
+ \hline 
+ Tout-en-un PC/PC* & M.-N. Sanz & Dunod & \\
+ \hline 
+ Physique en PC/PC* & Pascal Olive & Ellipses & \\
  \hline
 \end{tabularx}
 \end{center}
