--- a/LP_CinematiqueRelativiste.tex
+++ b/LP_CinematiqueRelativiste.tex
@@ -14,6 +14,16 @@
   \hline 
   Titre & Auteurs & Editeur (année) & ISBN \\
   \hline
+  Relativité & M. Boratev et R. Kerner & Ellipses & \\
+  \hline
+  La relativité & A. Einstein & Payot & \\
+  \hline
+  Relativité et Invariance - Fondements et applications & J.-P. Pérez & Dunod & \\
+  \hline
+  Relativité Restreinte (exos) & Y. Simon & Armand Colin & \\
+  \hline
+  Mécanique 1 (Chap 1) & BFR & Dunod (1984) & \\
+  \hline
 \end{tabularx}
 \end{center}
 
@@ -28,8 +38,9 @@
 \section{Emergence de la relativité restreinte}
 
 \subsection{Transformation de galilée en électromagnétisme}
-
+Les équations de l'électromagnétisme ne sont valables que dans le référentiel de l'éther pour concilier mécanique classique et électromagnétisme.
 \subsection{Expérience de Michelson et Morlay}
+Montrer les résultats de l'expérience de Michelson et Morlay (Michelson et Morlay, 1887). 
 
 \subsection{Postulat d'Einstein}
 
