--- a/LP_Gravitation.tex
+++ b/LP_Gravitation.tex
@@ -21,6 +21,7 @@ La physique par la pratique    & B. Portelli et J. Barthes   &  H\&K (2005) &   
     Mécanique, Fondements et applications & J.-Ph. Pérez   & Dunod (2014)   &      \\
   \hline 
   Physique tout-en-un 2ème année PC-PSI & M.-N. Sanz & Dunod (2004) & \\
+  Mécanique I & J-P Faroux et J. Renault & Dunod (1995) & \\
   \hline
 \end{tabularx}
 \end{center}
@@ -107,6 +108,7 @@ Schéma pendule simple. PFD $\ddot{\theta} + \frac{g}{L} \sin \theta$. Approxima
 Discussion champ de pesanteur non uniforme sur la Terre dû à la non sphéricité de la Terre.
 
 \section{Effets de marées (33'20)}
+Le Gié (Mécanique I) ou Faroux-Renault p278-286
 
 Schéma système Terre+Lune. Champ de marée $\mathbf{\mathcal{C}}(M) = \mathbf{\mathcal{G}}_L(M) - \mathbf{\mathcal{G}}_L(T) =  G m_L \left( \frac{\mathbf{MA}}{MA^3} - \frac{\mathbf{TA}}{TA^3} \right) = G \frac{m_A r}{2d^3} \left[(3cos^2(\theta) - 1) \mathbf{e_r} - \frac{3}{2} sin(2\theta) \mathbf{e_\theta} \right] = - \nabla V_A(M)$.
 
