--- a/LP_Resonance/LP_Resonance.tex
+++ b/LP_Resonance/LP_Resonance.tex
@@ -42,12 +42,22 @@
 
   \textbf{Déroulé détaillé de la leçon: }  
   
-  \section*{Introduction}
-Définition : pour un système auquel qu'on soumet à une excitation sinusoïdale de pulsation $\omega$, la réponse du système est maximale à la pulsation $\omega_0$, appelée fréquence de résonance.
-  \section{Oscillateurs harmoniques amortis}
-  \subsection{Résonance en vitesse en régime forcé} 
+\section*{Introduction}
+Définition : pour un système auquel qu'on soumet à une excitation sinusoïdale de pulsation $\omega$, la réponse du système est maximale à la pulsation $\omega_r$, appelée fréquence de résonance.
+
+\section{Oscillateurs harmoniques amortis}
+
+\subsection{Résonance en vitesse en régime forcé} 
+
 \textcolor{red}{Attention, faire la discussion sur la phase}. Interprétation énergétique possible.
-  \section{Oscillateurs couplés}
+
+\subsection{Equivalent électrocinétique}
+Démontrer la résonance en tension de la capacité d'un circuit RLC série.\\
+
+Déterminer la fréquence de résonance et comparer avec les valeurs obtenues pour le RLC-mètre. On peut aussi observer l'évolution de la résonance à le changement de la résistance, le relié au facteur de qualité.
+
+\section{Oscillateurs couplés}
+Interprétation en terme d'excitation de mode propre.
 \begin{center}
     \includegraphics[scale=0.5]{LP_Resonance/Oscillateurs_couple.jpg}
 \end{center}    
@@ -56,4 +66,9 @@ Définition : pour un système auquel qu'on soumet à une excitation sinusoïdal
 \textcolor{blue}{Expérience : }montrer l'influence du couplage sur la résonance du premier circuit RLC à l'aide d'un deuxième circuit RLC. Intérêt pratique ?
 
 \section{Cavité résonante}
+\subsection{Cavité Fabry Pérot}
+\subsection{Intensité transmise}
+Calcul possiblement à faire soit hyper rapidement, soit en prérequiss.
+
+\subsection{Finesse}
 \end{reportBlock}
