--- a/LP_RetroactionOscillation.tex
+++ b/LP_RetroactionOscillation.tex
@@ -44,12 +44,16 @@
   
   \section*{Introduction}
 
-  \section{Transition de phase du 1er ordre}
+  \section{Rétroactions}
   \subsection{Enthalpie de changement d'état} 
 
 
-  \section{Transition de phase du 2nd ordre}
-\subsection{Transition paramagnétisme-ferromagnétisme}
+  \section{Oscillations}
+\subsection{Oscillateur à Pont de Wien}
+Prendre $R_1\sim 1k\Omega$ pour l'amplification et $R=1k\Omega$ dans le filtre. Mettre $t-t_0$ pour le fit et enregistrer les oscillations par clé USB directement sur l'oscillo. Fitter par 
+\begin{equation}
+    A\exp\left(-a\omega_0(t+t_0)\right)\times\sin\left(\sqrt{1-\alpha^2}\omega_0(t+t_0)\right)
+\end{equation}
 
 
 \end{reportBlock}
