--- a/LP_Avancement.tex
+++ b/LP_Avancement.tex
@@ -23,7 +23,7 @@
   \hline 
   \textbf{Transitions de phase} p\pageref{LP_TransitionPhase} & Mesure chaleur latente de l'eau/azote & \textcolor{red}{\textbf{20\%}} & \\
   \hline 
-  \textbf{Phénomènes de transport} p\pageref{LP_Transport} & \textcolor{red}{Diffusion du glycérol dans l'eau/conductivité thermique du cuivre}& \textcolor{red}{\textbf{0\%}} & Annale 2017 (standard) + Leçon Lucas pas mal\\
+  \textbf{Phénomènes de transport} p\pageref{LP_Transport} & Diffusion du glycérol dans l'eau (TP fluide et capillarité) & \textcolor{green}{\textbf{80\%}} & à répéter\\
   \hline 
   \hline
   \textbf{Conversion de puissance électromécanique} p\pageref{LP_ConversionPuissance} & Etude MCC (résistance, rendement, ...) & \textcolor{red}{\textbf{0\%}} & Leçon Basile\\
@@ -68,14 +68,14 @@
   \hline
   \textbf{Mécanismes de la conduction électrique dans les solides} p\pageref{LP_Conduction} & Mesure gap germanium (cf TP semi) & \textcolor{yellow}{\textbf{50\%}} & Trasitions délicates, revoir partie 1, manip à la fin pas top \\
   \hline
-  \textbf{Phénomènes de résonance dans différents domaines de la physique} p\pageref{LP_resonance} & Détermination couplage mutuel circuits RLC couplés & \textcolor{red}{\textbf{0\%}} &  \\
+  \textbf{Phénomènes de résonance dans différents domaines de la physique} p\pageref{LP_resonance} & Détermination couplage mutuel circuits RLC couplés & \textcolor{yellow}{\textbf{40\%}} & Plan à détailler  \\
   \hline
   \textbf{Oscillateurs ; portraits de phase et non-linéarités} & quanti : Pendule Borda, quali : portait de phase & \textcolor{red}{\textbf{0\%}} & Leçon Basile pour ref  \\
   \hline
   \hline
   \textbf{Cinématique relativiste. Expérience de Michelson et Morley} p\pageref{LP_CinematiqueRelativiste} & logiciel Gum\_MC, exp Frish et Smith & \textcolor{yellow}{\textbf{20\%}} & Plan ok, manip à bosser  \\
   \hline
-  \textbf{Effet tunnel : application à la radioactivité alpha} & simulation Alexandre & \textcolor{red}{\textbf{0\%}} & Code Gamow à retravailler  \\
+  \textbf{Effet tunnel : application à la radioactivité alpha} & simulation Alexandre & \textcolor{yellow}{\textbf{40\%}} & Partie 1 :ne pas faire le calcul, interprétation physique courant, voir discussion avec Karim  \\
   \hline
 \end{tabularx}
 \end{center}
